--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@
 /Assets/*
 !/Assets/_Scripts/
 /Assets/_Scripts/*.meta
-!/Assets/StreamingAssets/Data/
+!/Assets/StreamingAssets/
+/Assets/StreamingAssets/*
+!/Assets/StreamingAssets/Data
